test: 음식점 단위 테스트 코드 리팩토링